@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Better logging about inexistent tags
 
 
 Version 0.7.3 (2014/02/14)
